Fix publish.yml and run linters

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,13 +33,7 @@ jobs:
         
     - name: Run tests
       run: |
-        pytest --cov=tatry --cov-report=xml
-        
-    - name: Upload coverage
-      uses: codecov/codecov-action@v3
-      with:
-        file: ./coverage.xml
-        fail_ci_if_error: true
+        pytest --cov=tatry
 
     - name: Coverage Report
       run: |
