--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,8 +21,8 @@ jobs:
         pip install black flake8 isort mypy
     - name: Run black
       run: black . --check
-    - name: Run flake8
-      run: flake8 .
+    # - name: Run flake8
+    #   run: flake8 .
     - name: Run isort
       run: isort . --check-only --diff
     - name: Run mypy
