--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,15 +8,13 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment:
-      name: pypi
-      url: https://pypi.org/p/tatry
     permissions:
       id-token: write
 
     steps:
     - uses: actions/checkout@v4
       with:
+        repository: tatryai/tatry
         fetch-depth: 0
 
     - name: Set up Python
@@ -37,6 +35,7 @@ jobs:
 
     - name: Test Build Version
       run: |
+        pip install dist/*.whl  # Instalujemy lokalnie żeby sprawdzić wersję
         PACKAGE_VERSION=$(python -c "from tatry import __version__; print(__version__)")
         TAG_VERSION=${GITHUB_REF#refs/tags/v}
         echo "Package version: $PACKAGE_VERSION"
@@ -51,6 +50,12 @@ jobs:
       with:
         repository-url: https://test.pypi.org/legacy/
         skip-existing: true
+      environment:
+        name: testpypi
+        url: https://test.pypi.org/p/tatry
 
     - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
+      environment:
+        name: pypi
+        url: https://pypi.org/p/tatry
