--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,12 +89,10 @@ warn_unreachable = true
 
 [[tool.mypy.overrides]]
 module = "pydantic.*"
-init_forbid_extra = true
-init_typed = true
-warn_required_dynamic_aliases = true
-warn_untyped_fields = true
+follow_imports = "silent"
+ignore_missing_imports = true
 
 [tool.flake8]
 max-line-length = 88
-extend-ignore = "E203"
+extend-ignore = ["E203", "E501", "W503"]
 exclude = [".git", "__pycache__", "build", "dist"]
