--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,11 +6,10 @@ on:
       - 'v*'
 
 jobs:
-  deploy:
+  test-pypi:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
-
     steps:
     - uses: actions/checkout@v4
       with:
@@ -35,7 +34,7 @@ jobs:
 
     - name: Test Build Version
       run: |
-        pip install dist/*.whl  # Instalujemy lokalnie żeby sprawdzić wersję
+        pip install dist/*.whl
         PACKAGE_VERSION=$(python -c "from tatry import __version__; print(__version__)")
         TAG_VERSION=${GITHUB_REF#refs/tags/v}
         echo "Package version: $PACKAGE_VERSION"
@@ -50,6 +49,30 @@ jobs:
       with:
         repository-url: https://test.pypi.org/legacy/
         skip-existing: true
+
+  pypi:
+    needs: test-pypi
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        repository: tatryai/tatry
+        fetch-depth: 0
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.x"
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install build
+
+    - name: Build package
+      run: python -m build
 
     - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
