--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,6 +22,6 @@ jobs:
     - name: Run black
       run: black . --check
     - name: Run flake8
-      run: flake8 .
+      run: flake8 . --extend-ignore=E203,E501,W503
     - name: Run isort
       run: isort . --check-only --diff
