--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ dev = [
     "black>=22.0.0",
     "isort>=5.0.0",
     "mypy>=1.0.0",
-    "flake8-pyproject",
+    "flake8>=4.0.0",
     "types-requests>=2.31.0",
 ]
 
