--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,9 @@ Homepage = "https://github.com/tatryai/tatry"
 "Bug Tracker" = "https://github.com/tatryai/tatry/issues"
 
 [project.optional-dependencies]
+langchain = [
+    "langchain>=0.3.19",
+]
 test = [
     "pytest>=7.0.0",
     "pytest-cov>=4.0.0",
